[project]
name = "funhtml"
version = "1.0.3"
description = "funhtml"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funhtml"
Releases = "https://github.com/farfarfun/funhtml/releases"

[tool.setuptools]
license-files = []
